set up header html skeleton

--- a/src/style.css
+++ b/src/style.css
@@ -21,4 +21,7 @@ body {
   color: var(--color-tertiary);
   font-weight: 300;
   background-color: var(--color-secondary);
+  padding: 0 16px;
 }
+
+
