--- a/src/style.css
+++ b/src/style.css
@@ -24,4 +24,59 @@ body {
   padding: 0 16px;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
 
+.header__logo {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+}
+
+.header__logo img {
+  width: 32px;
+  height: 32px;
+  position: relative;
+  top: 6px;
+}
+
+.header__logo h2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-left: 8px;
+}
+
+.header__search {
+  display: flex;
+  align-items: center;
+  border: 1px solid var(--color-primary);
+  border-radius: 50px;
+  padding: 8px;
+  background-color: #fff;
+  column-gap: 20px;
+  margin-top: 16px;
+}
+
+.header__search img {
+  width: 24px;
+  height: 24px;
+}
+
+.header__search input {
+  font-size: 14px;
+  font-weight: 300;
+  color: #000;
+  outline: none;
+  border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
