--- a/src/style.css
+++ b/src/style.css
@@ -35,32 +35,41 @@ body {
 }
 
 .header__logo img {
-  width: 32px;
-  height: 32px;
+  width: 48px;
+  height: 48px;
   position: relative;
-  top: 6px;
+  top: 3px;
+  background: linear-gradient(to right, var(--color-primary) 0%, #66d59f, rgba(102, 213, 159, 0.82));
+  border-radius: 50%;
+  padding: 6px;
 }
 
 .header__logo h2 {
   font-size: 24px;
   font-weight: 600;
   margin-left: 8px;
+  text-transform: uppercase;
+}
+
+span {
+  color: var(--color-primary);
 }
 
 .header__search {
   display: flex;
   align-items: center;
-  border: 1px solid var(--color-primary);
   border-radius: 50px;
   padding: 8px;
   background-color: #fff;
   column-gap: 20px;
   margin-top: 16px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .header__search img {
   width: 24px;
   height: 24px;
+  cursor: pointer;
 }
 
 .header__search input {
@@ -73,8 +82,23 @@ body {
 
 @media screen and (min-width: 768px) {
   .header {
+    max-width: 1200px;
+    margin: 0 auto;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .header__search {
+    position: relative;
+    top: 5px;
+    width: 400px;
+  }
+
+  .header__logo img {
+    width: 48px;
+    height: 48px;
+    position: relative;
+    top: 6px;
   }
 }
